--- a/src/app/neon-list/neon-list.component.html
+++ b/src/app/neon-list/neon-list.component.html
@@ -521,7 +521,7 @@
         <span *ngIf="commandFailed" class='errorMessage'>{{errorMessage}}</span>
         <!-- <button  (click)="command();" style="margin-right: 5%;;" class="next-btn">Valider et payer</button> -->
         <!-- <button *ngIf="neonSelected.state === 'commandé'"  (click)="openCommand();" style="margin-right: 5%;" class="next-btn">Payer</button> -->
-        <a target="_blank" class="hyperlink" href='https://stripe.com/fr/legal'>Voir nos condition générales d'utilisations</a>
+        <a target="_blank" class="hyperlink" href='https://stripe.com/fr/legal'>Voir nos conditions générales d'utilisation</a>
 
       </div>
 
