--- a/src/styles.scss
+++ b/src/styles.scss
@@ -146,6 +146,7 @@
   padding-left: 35px;
   padding-right: 35px;
   height: 85px;
+  font-size: 17px !important;
 }
 .prev-btn {
     // min-width: 140px;
@@ -194,10 +195,10 @@
   margin-bottom: 1.5% !important;
 }
 .pt3 {
-  padding-top: 3% !important;
+  padding-top: 2% !important;
 }
 .pb3 {
-  padding-bottom: 3% !important;
+  padding-bottom: 2% !important;
 }
 .mt5 {
   margin-top: 5% !important;
