--- a/src/app/neon-form/neon-form.component.html
+++ b/src/app/neon-form/neon-form.component.html
@@ -4,7 +4,7 @@
 
 
   <input  appAutowidth   autocomplete="off" (keyup)="onChangeTextTitle($event.target.value)" [(value)]="textInput" [className]="neonColorClass + ' dynamicNeonTitle ' + neonTypoClass "
-   style="align-self: center; text-align: center; letter-spacing: 2px;  height: 100px !important;"  *ngIf="userChoices[0] === 'text' && userChoices[3] === 'typo' " />
+   style="align-self: center; text-align: center; letter-spacing: 2px;  min-height: 80px !important;"  *ngIf="userChoices[0] === 'text' && userChoices[3] === 'typo' " />
       <!-- <h2   [className]="neonColorClass + ' ' + neonTypoClass " style="align-self: center; text-align: center; letter-spacing: 2px; width: 100%;" >{{textInput}}</h2> -->
 
 
@@ -204,11 +204,11 @@
       <aw-wizard-step *ngIf="!finalStep "  stepTitle="" class="col-md-6 col-sm-10  step-container">
 
         <div *ngIf="projectType === 'consumer'  && !finalStep " class="col-md-12 col-sm-12">
-          <h5 class="neon-wizard-header ">Obtenez votre dessin technique en {{suceMaBite}}</h5>
+          <h5 class="neon-wizard-header mb5">Obtenez votre dessin technique en {{suceMaBite}}</h5>
 
 
 
-          <div class="neon-wizard-input-cont mb3">
+          <div class="neon-wizard-input-cont mb5">
 
             <div *ngIf="signUp" class='user-info-row-cont nestedInput'>
               <span class="user-info-row-title">Prénom</span>
@@ -226,7 +226,7 @@
           </div>
 
 
-          <div class='user-info-row-cont mb3'>
+          <div class='user-info-row-cont mb5'>
             <span class="user-info-row-title">Adresse mail</span>
             <input autocomplete="off" (change)="onChangeUserInfo('email', $event.target.value)" [value]="userInfoPerso['email'] || ''"
               class="basic-input smallHeight " />
@@ -234,7 +234,7 @@
           </div>
 
 
-          <div class='user-info-row-cont mb3'>
+          <div class='user-info-row-cont mb5'>
             <span class="user-info-row-title">Mot de passe</span>
             <input autocomplete="off" type="password" (change)="onChangeUserInfo('password', $event.target.value)"
               [value]="userInfoPerso['password'] || ''" class="basic-input smallHeight mb3 " />
@@ -261,8 +261,8 @@
 
 
         <div *ngIf="projectType === 'business' && !finalStep " class=" col-md-12 col-sm-12 ">
-          <h5 class="neon-wizard-header ">Obtenez votre devis gratuit</h5>
-          <div class='user-info-row-cont mb3'>
+          <h5 class="neon-wizard-header mb5 ">Obtenez votre devis gratuit</h5>
+          <div class='user-info-row-cont mb5'>
             <span class="user-info-row-title">Société</span>
             <input  autocomplete="off" type="text" (change)="onChangeUserInfo('société', $event.target.value)" [value]="userInfoPerso['société'] || ''"
               class="basic-input smallHeight mb3 " />
@@ -285,14 +285,14 @@
 
           </div>
 
-          <div class='user-info-row-cont mb3'>
+          <div class='user-info-row-cont mb5'>
             <span class="user-info-row-title">Adresse mail</span>
             <input autocomplete="off" type="email" (change)="onChangeUserInfo('email', $event.target.value)" [value]="userInfoPerso['email'] || ''"
               class="basic-input smallHeight " />
 
           </div>
 
-          <div class='user-info-row-cont mb3'>
+          <div class='user-info-row-cont mb5'>
             <span class="user-info-row-title">Mot de passe</span>
             <input autocomplete="off" type="password" (change)="onChangeUserInfo('password', $event.target.value)" [value]="userInfoPerso['password'] || ''"
               class="basic-input smallHeight " />
