--- a/src/app/neon-form/neon-form.component.scss
+++ b/src/app/neon-form/neon-form.component.scss
@@ -80,11 +80,12 @@ margin-bottom: 15px;
 
 .basic-input-form {
   overflow: hidden;
-  margin-left: 3%;
   cursor: pointer;
   padding: 3%;
   width: 100%;
   outline: none !important;
+  background-color: #F4F4F4;
+  border-radius: 25px;
   color: #000b31;
   font-family: Mukta-Bold, sans-serif;
 }
@@ -240,12 +241,15 @@ background-repeat: no-repeat;
 height: 100%
 }
 
-
+button:disabled {
+  cursor: default !important;
+  pointer-events: all !important;
+}
   .blancFroid {
     color: #ffffff !important;
   }
-  .blancChaud {
-    color: #ddcaaf !important;
+  .blanchaud {
+    color: #ede3c5 !important;
   }
   .orange {
     color: #ffa42c !important;
@@ -559,25 +563,37 @@ background-color: #000B31;
 // position: absolute !important;
 // top: 60% !important;
 // display: none !important;
+  padding-right: 20% !important;
+  padding-left: 20% !important;
+}
+
+.dynamicNeonTitle:after {
+  content: '';
+  display: inline-block;
+  padding-top: 100%;
+  vertical-align: middle;
+}
+.dynamicNeonTitle:before {
+  font-size: 2em;
+  color: white;
+  text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black;
 }
 
 .dynamicNeonTitle {
 align-self: center;
-/* position: absolute; */
 text-align: center;
-background-color: white;
-  // width: 49%;
+  border-radius: 50px;
 outline: none !important;
-/* height: 168px; */
 font-size: 3vw;
 /* padding-bottom: 1%; */
 display: -webkit-box;
 display: flex;
 /* top: 10%; */
-border-radius: 15px;
   padding-left: 5%;
   padding-right: 5%;
-// height: 100px;
+  box-shadow: inset 2000px 0 0 0 rgba(0, 11, 49, 0.70);
+  border-color: rgba(0, 125, 255, 1);
+  color: white;
 }
 
 
@@ -808,6 +824,7 @@ font-size: 17px;
 height: 60%;
 margin-top: 5%;
 margin-bottom: 5%;
+  min-height: 75px;
 background-repeat: no-repeat;
 background-position: center;
 background-size: contain;
@@ -852,23 +869,22 @@ cursor: pointer;      box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.14);
 }
 }
 
-input[type="checkbox"] { 
+input[type="checkbox"] {
   position: absolute;
   opacity: 0;
 }   
 
 .toggleCont {
 align-self: center;
-margin-top: -4%;
   justify-content:  center;
   display: flex;
 }
 input[type="checkbox"].ios-switch + div {
   vertical-align: middle;
-  width: 40px;    height: 20px;
-  border: 1px solid rgba(0,0,0,.4);
+  width: 40px;    height: 22px;
+  border: 2px solid rgba(0,0,0,.4);
   border-radius: 999px;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: #F4F4F4;
   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.14);
 
   margin: 15px;
@@ -879,7 +895,7 @@ input[type="checkbox"].ios-switch:checked + div {
   width: 40px;
   background-position: 0 0;
   background-color: #F4CC20;
-  border: 1px solid black;
+  border: 2px solid black;
   box-shadow: inset 0 0 0 10px #F4CC20;
 }
 
@@ -907,7 +923,7 @@ label {
 
 .tailleperso {
   align-self: center;
-  font-family: Nunito-Black, sans-serif;
+  font-family: Mukta-Bold, sans-serif;
 }
 /* Checked Knob (Blue Style) */
 input[type="checkbox"].ios-switch:checked + div > div {
@@ -1114,6 +1130,9 @@ a {
 
 
 @media screen and (max-width: 700px) {
+  //.steps-indicator {
+  //
+  //}
   .midwidthsm {
     width: 50% !important;
   }
