--- a/src/app/neon-list/neon-list.component.scss
+++ b/src/app/neon-list/neon-list.component.scss
@@ -45,6 +45,8 @@
   margin-top: 5%;
   //padding-right: 7%;
   background-color: #000b31;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
 .pd7 {
@@ -53,6 +55,9 @@
 
 .ec-petit-prince {
   height: 90%;
+}
+.checkboxCont  {
+  display: flex;
 }
 
 .ec-list-cont {
@@ -66,7 +71,6 @@
   height: 80%;
   // padding-left: 2.5%;
   // padding-right: 2.5%;
-  padding-top: 2%;
   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.14);
 }
 
@@ -86,7 +90,7 @@
 .tailleperso {
   font-family: Nunito-Regular, sans-serif;
 }
-h2 {
+h2, h1 {
   font-family: Nunito-Black, sans-serif;
   color: #000b31;
 }
@@ -129,7 +133,7 @@ h2 {
   width: 100%;
   display: flex;
   padding: 0 !important;
-  height: 250px;
+  height: auto;
   border-radius: 10px;
   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.14);
   transition: 0.4s;
@@ -140,7 +144,7 @@ h2 {
   width: 30%;
   display: flex;
   border: none !important;
-  height: 250px;
+  height: auto;
     border-radius: 10px;
   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.14);
   transition: 0.4s;
@@ -329,7 +333,7 @@ td:before {
 
 .card-logo {
   width: inherit;
-  height: 25%;
+  height: 75px;
   margin-bottom: 5%;
   background-repeat: no-repeat;
   background-position: center;
@@ -343,9 +347,11 @@ td:before {
 }
 .ec-title-blue {
   font-family: Nunito-Black, sans-serif;
-font-size: 1.5rem;
 color: white;
 align-self: center;
+  margin-top: 15px;
+  margin-bottom: 15px;
+
 }
 .ec-card-title {
   font-family: Nunito-Black, sans-serif;
@@ -356,7 +362,7 @@ align-self: center;
 }
 .ec-card-descr-blue {
   font-family: Mukta-Regular, sans-serif;
-  font-size: 14px;
+  font-size: 17px;
   // overflow-y: scroll;
 
   color: white;
@@ -364,7 +370,7 @@ align-self: center;
 }
 .ec-card-descr {
   font-family: Mukta-Regular, sans-serif;
-  font-size: 14px;
+  font-size: 17px;
   // overflow-y: scroll;
 
   color: #000b31;
@@ -656,7 +662,8 @@ margin-bottom: 15px;
 .bar-btn-cont {
     flex: 3;
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-end;
+    margin-right: 15px;
 }
 
 .neon-bar-item-cont {
@@ -783,7 +790,7 @@ margin-bottom: 15px;
   justify-content: flex-start   ;
   border-radius: 7px;
   overflow-y: scroll;
-  height: 70%;
+  height: auto;
     padding: 2em;
   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.14);
 }
@@ -833,6 +840,7 @@ margin-bottom: 15px;
 
 .livraisonDom{
   align-self: center;
+  margin-bottom: 10px;
   font-family: Mukta-Bold, sans-serif;
   font-size: 17px;}
 
