--- a/src/app/modal-recap/modal-recap.component.scss
+++ b/src/app/modal-recap/modal-recap.component.scss
@@ -7,3 +7,6 @@
 .v-mat-dialog-actions {
   justify-content: space-around !important;
 }
+.mat-line {
+  font-family: Mukta-Regular, sans-serif !important;
+}
