--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -43,7 +43,7 @@ background-color: transparent !important;
 }
 
 .user-info-row-title {
- font-size: 0.8em;
+ font-size: 17px;
  font-family: Mukta-Regular, sans-serif;
  padding-left: 20px;
  padding-right: 20px;
@@ -79,6 +79,7 @@ background-color: transparent !important;
     color: #F44336;
     font-family: Mukta-Bold;
     text-align: center;
+    font-size: 11px;
 }
 
 .login-header {
