--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -22,8 +22,8 @@
 
                      </div>
                         <div *ngIf="loginFailed" class="errorMessage">Oops! Le mot de passe est incorrect...</div>
-                            <button class="prev-btn login-btn " (click)="onLogin()" type="button" >Connexion</button> 
-                            <button  class="next-btn login-btn" (click)="onSwitchLoginType()" type="button" >Retour</button>
+                            <button class="next-btn login-btn " (click)="onLogin()" type="button" >Connexion</button> 
+                            <button  class="prev-btn login-btn" (click)="onSwitchLoginType()" type="button" >Retour</button>
             </div>
 
 
