--- a/src/app/neon-form/neon-form.component.scss
+++ b/src/app/neon-form/neon-form.component.scss
@@ -601,6 +601,7 @@ display: flex;
 .form-container {
   font-family: 'Nunito', sans-serif;
 // background-color: #000b31;
+background-color: gray;
 min-height: 100vh;
 // padding-top: 7%;
 display: flex;
