--- a/src/app/neon-form/neon-form.component.html
+++ b/src/app/neon-form/neon-form.component.html
@@ -125,7 +125,7 @@
 
 
         <div class="neon-wizard-btn-container row flex0">
-          <button  class="next-btn col-md-3 col-sm-12"  type="button" awPreviousStep>Précedent</button>
+          <button  class="prev-btn col-md-3 col-sm-12"  type="button" awPreviousStep>Précedent</button>
           <button [ngClass]="!selectedColor? 'next-btn col-md-3 col-sm-12 disabled' : 'next-btn col-md-3 col-sm-12'"  type="button" [disabled]="!selectedColor" awNextStep>Suivant</button>
 
         </div>
