--- a/src/app/neon-form/neon-form.component.html
+++ b/src/app/neon-form/neon-form.component.html
@@ -16,7 +16,7 @@
 
         <div class="neon-wizard-btn-container  row flex3 ">  
           <button type="button" class="form-btn col-md-4 col-sm-12" (click)="onCompleteStep(0, 'text', null)"
-            awNextStep>TEXTE</button>
+            awNextStep>LOGO</button>
           <button type="button" class="form-btn col-md-4 col-sm-12" (click)="onCompleteStep(0, 'image', null)"
             awNextStep>IMAGE</button>
         </div>
@@ -110,7 +110,7 @@
 
             
         <div  class="mt5 mb5 row colorCont">
-          <div  [ngClass]=" selectedColorUI=== i? ' yellow-selected col-md-3  col-sm-6 colorIcon' : '  col-md-3 col-sm-6 colorIcon'"   [style.backgroundImage]="'url('+ color.url +')'"   (click)="onSelectColor(color, i)" 
+          <div  [ngClass]=" selectedColorUI=== i? '  col-md-3  col-sm-6 colorIcon' : '  col-md-3 col-sm-6 colorIcon'"   [style.backgroundImage]="'url('+ color.url +')'"   (click)="onSelectColor(color, i)" 
           *ngFor="let color of colorList;  let i = index">
 
 
@@ -142,7 +142,7 @@
         </h4>
         <div  class=" row flex3">
           <div   *ngFor="let format of formatSizes;  let i = index" class="col-md-3 midwidthsm" style="display: flex; flex-direction: column">
-            <div  [ngClass]=" selectedFormatSize=== i? 'size yellow-selected ' : 'size'"  [style.backgroundImage]="'url('+ format.url +')'"  (click)="selectedFormatSize = i">
+            <div  [ngClass]=" selectedFormatSize=== i? 'size ' : 'size'"  [style.backgroundImage]="'url('+ format.url +')'"  (click)="onSelectFormatSize(format, i)">
           </div>
 
             <div  class='sizeName'>
@@ -154,7 +154,7 @@
         <div class="neon-wizard-btn-container2 mt5 row flex1">
           <button  class="newPrev-btn " type="button" awPreviousStep><mat-icon mat-list-icon>keyboard_arrow_left</mat-icon>          </button>
           <button  [ngClass]="!selectedFormatSize? 'next-btn col-md-3 col-sm-12 disabled' : 'next-btn col-md-3 col-sm-12'"  type="button" [disabled]="!selectedFormatSize"  awNextStep>Suivant</button>
-        </div>
+        </div>  
 
       </aw-wizard-step>
       <aw-wizard-step *ngIf="!finalStep "  stepTitle="" class="col-md-6 col-sm-10  step-container">
@@ -246,7 +246,7 @@
           </div>
           <div class="neon-wizard-btn-container2 row">
             <button  class="newPrev-btn " type="button" awPreviousStep><mat-icon mat-list-icon>keyboard_arrow_left</mat-icon>          </button>
-            <button class="next-btn  col-md-3 col-sm-12" (click)="openRecap()"  type="button" awNextStep>Envoyer</button>
+            <button class="next-btn  col-md-3 col-sm-12" (click)="openRecap()"  type="button" >Envoyer</button>
 
           </div>
 
@@ -306,7 +306,7 @@
 
           <div class="neon-wizard-btn-container2 row">
             <button  class="newPrev-btn " type="button" awPreviousStep><mat-icon mat-list-icon>keyboard_arrow_left</mat-icon>          </button>
-            <button class="next-btn col-md-3 col-sm-12" type="button" (click)="openRecap()" awNextStep>Envoyer</button>
+            <button class="next-btn col-md-3 col-sm-12" type="button" (click)="openRecap()" >Envoyer</button>
 
           </div>
         </div>
@@ -319,7 +319,7 @@
         <div class="neon-canvas2" [style.backgroundImage]="'url('+ '../.././assets/Mercipage-03.png' +')'" ></div>
 
         <div    class="neon-wizard-header">
-          <h4>Demande envoyée</h4>
+          <h3>Demande envoyée</h3>
         </div>
         
         <span    class="neon-wizard-descr-merci">
@@ -327,7 +327,7 @@
         </span>
 
 
-        <div class="neon-wizard-btn-container row flex0">
+        <div class="neon-wizard-btn-container2 row flex0">
           <button class='next-btn col-md-3 col-sm-12' type="button" (click)="goToEC();">Accéder à mon espace</button>
 
         </div>
@@ -338,7 +338,7 @@
         <div class="neon-canvas2" [style.backgroundImage]="'url('+ '../.././assets/Mercipage-03.png' +')'" ></div>
 
         <div    class="neon-wizard-header">
-          <h4>Demande envoyée</h4>
+          <h3>Demande envoyée</h3>
         </div>
         
         <span    class="neon-wizard-descr-merci">
@@ -346,7 +346,7 @@
         </span>
 
 
-        <div class="neon-wizard-btn-container row flex0">
+        <div class="neon-wizard-btn-container2 row flex0">
           <button class='next-btn col-md-3 col-sm-12' type="button" (click)="goToAcceuil();">Retourner à l'acceuil</button>
 
         </div>
