--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -22,13 +22,14 @@
 
                      </div>
                         <div *ngIf="loginFailed" class="errorMessage">Oops! Le mot de passe est incorrect...</div>
-                            <button class="next-btn login-btn " (click)="onLogin()" type="button" >Connexion</button> 
+                            <button class="next-btn-no-margin login-btn " (click)="onLogin()" type="button" >Connexion</button> 
                             <button  class="prev-btn login-btn" (click)="onSwitchLoginType()" type="button" >Retour</button>
             </div>
 
 
 
             <div *ngIf="!isSignIn" class="login-step-container">
+                    <h2 class="login-title">Créez votre espace</h2>
 
                      <div class='user-info-row-cont login-row'>
                             <span class="user-info-row-title">Prénom</span>
@@ -53,9 +54,9 @@
                               <!-- <a style="text-align: center; text-decoration: underline; margin-top: 3%;" href="#">J'ai oublié mon mot de passe</a> -->
                               <div *ngIf="loginFailed" class="errorMessage">{{signUpError}}</div>
                      </div>
-                            <button class="next-btn signup-btn " (click)="onSignUp()" type="button" >C'est parti</button> 
+                            <button class="next-btn-no-margin signup-btn " (click)="onSignUp()" type="button" >C'est parti</button> 
                             <button  class="prev-btn signup-btn" (click)="onSwitchLoginType()" type="button" >J'ai déjà un compte</button>
-            </div>
+            </div>  
 </div>
    
     <div class="col-lg-4 col-md-2 col-sm-2 col-xs-2"></div>
