--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -10,8 +10,7 @@ background-color: transparent !important;
     color: #000b31;
     padding-left: 10%;
     padding-right: 10%;
-    margin-bottom: 5%;
- 
+    margin-bottom: 70px; 
  }
 
  .login-row {
